WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236984
[JSC] ShadowRealm wrapArgument should check exceptions
https://bugs.webkit.org/show_bug.cgi?id=236984
Summary
[JSC] ShadowRealm wrapArgument should check exceptions
Yusuke Suzuki
Reported
2022-02-21 10:48:43 PST
[JSC] ShadowRealm wrapArgument should check exceptions
Attachments
Patch
(1.50 KB, patch)
2022-02-21 10:49 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(3.00 KB, patch)
2022-02-21 10:57 PST
,
Yusuke Suzuki
ashvayka
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-02-21 10:49:22 PST
Created
attachment 452746
[details]
Patch
Yusuke Suzuki
Comment 2
2022-02-21 10:49:26 PST
<
rdar://problem/89226554
>
Yusuke Suzuki
Comment 3
2022-02-21 10:57:30 PST
Created
attachment 452747
[details]
Patch
Yusuke Suzuki
Comment 4
2022-02-21 14:06:58 PST
Committed
r290269
(
247594@trunk
): <
https://commits.webkit.org/247594@trunk
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug