[JSC] ShadowRealm wrapArgument should check exceptions https://bugs.webkit.org/show_bug.cgi?id=236984 JSTests:

Reviewed by Alexey Shvayka.

* stress/exception-in-wrap-argument-for-shadow-realm.js: Added.
(shouldThrow):

Source/JavaScriptCore:

rdar://89226554

Reviewed by Alexey Shvayka.

We should check exceptions after wrapArgument.

* runtime/JSRemoteFunction.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):


Canonical link: https://commits.webkit.org/247594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290269 268f45cc-cd09-0410-ab3c-d52691b4dbfc